# langchain-weaviate

./: CONTRIBUTING.md
.devcontainer/: devcontainer.json
.github/scripts/: get_min_versions.py
.github/workflows/: _codespell.yml  _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/weaviate/: Makefile  pyproject.toml
libs/weaviate/langchain_weaviate/: vectorstores.py
