[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = []
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "langchain-core<0.4,>=0.1.33",
    "weaviate-client<5.0.0,>=4.0.0",
    "numpy>=2.0.0",
    "simsimd<7.0.0,>=6.2.1",
]
name = "langchain-weaviate"
version = "0.1.0"
description = "An integration package connecting Weaviate and LangChain"
readme = "README.md"

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-weaviate/tree/main/libs/weaviate"
repository = "https://github.com/langchain-ai/langchain-weaviate"

[dependency-groups]
test = [
    "pytest<9.0,>=7.3",
    "freezegun<2.0.0,>=1.2.2",
    "pytest-mock<4.0.0,>=3.10.0",
    "syrupy<5.0.0,>=4.0.2",
    "pytest-watcher<0.5.0,>=0.3.4",
    "pytest-asyncio<0.24.0,>=0.21.1",
    "pytest-docker<4.0.0,>=2.0.1",
    "pytest-xdist<4.0.0,>=3.5.0",
    "openai<2.0.0,>=1.6.0",
    "tiktoken<1,>=0.7",
    "pytest-cov<6.0,>=4.1",
    "langchain",
    "langchain-text-splitters",
    "langchain-core",
]
codespell = [
    "codespell<3.0.0,>=2.2.0",
]
lint = [
    "ruff<0.4.0,>=0.1.5",
]
typing = [
    "mypy<1.10,>=0.991",
    "types-requests<3.0.0.0,>=2.31.0.20240403",
]
dev = [
    "ipykernel<7.0.0,>=6.27.1",
]
test_integration = [
    "langchain-openai",
]

[tool.uv.sources]
langchain = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain"}
langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
langchain-text-splitters = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters"}
langchain-openai = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/openai"}

[tool.ruff]
lint.select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[tool.mypy]
disallow_untyped_defs = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5 -vv -s"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "compile: mark placeholder test used to compile integration tests without running them",
]
#asyncio_mode = "auto"
